squished bugs and added new font

--- a/src/App.css
+++ b/src/App.css
@@ -56,173 +56,14 @@ h1 {
   color: #555;
 }
 
-
-@media only screen and (width <=2000px) {
-  /* body {
-    background-color: darksalmon;
-  } */
-
-  iframe {
-    width: 30vw;
-    height: 20vw;
-  }
-
-  .maybe-grid {
-    grid-template-columns: 50% 30%;
-    column-gap: 30px;
-  }
-
+.gallerydescript {
+  font-family: Reenie Beanie;
+  font-size: 35pt;
+  font-weight: 600;
+  margin-top: -20pt;
+  margin-bottom: 20pt;
+  word-wrap: break-word;
 }
-
-
-@media only screen and (width <=1000px) {
-  /* body {
-    background-color: lightblue;
-    align-items: left;
-    text-align: left;
-  } */
-
-  h2 {
-    font-size: 15pt;
-    word-wrap: break-word;
-  }
-
-  p {
-    font-size: 10pt;
-    word-wrap: break-word;
-  }
-
-  .maybe-grid {
-    grid-template-columns: min-content;
-    grid-template-rows: min-content;
-    row-gap: 0px;
-    column-gap: 0px;
-    flex-direction: row;
-    display: flex;
-    flex-wrap: wrap-reverse;
-    align-items: left;
-    align-content: left;
-  }
-
-  .img_details {
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    width: 40vw;
-    height: 60vw;
-    object-position: bottom left;
-    align-items: left;
-    align-self: left;
-  }
-
-  .picture-div {
-    padding-left: 2vh;
-    margin-left: 2vh;
-    display: flex;
-
-  }
-
-  .text-div {
-    align-items: left;
-    align-self: left;
-    align-content: left;
-  }
-
-  iframe {
-    width: 50vw;
-    height: 30vw;
-  }
-
-  .p_left_align {
-    font-size: 10pt;
-    flex-wrap: wrap;
-    word-wrap: break-word;
-  }
-
-  .h1_photo_gallery {
-    font-size: 30pt;
-    word-wrap: break-word;
-  }
-
-  .h1_left_align {
-    font-size: 15pt;
-    word-wrap: break-word;
-  }
-
-  .about-container {
-    align-items: left;
-    align-content: left;
-    align-self: left;
-  }
-}
-
-@media only screen and (width <=640px) {
-  /* body {
-    background-color: darkgrey;
-    word-wrap: break-word;
-  } */
-
-  h2 {
-    font-size: 8pt;
-    word-wrap: break-word;
-    padding: 0px;
-  }
-
-  .h1_left_align {
-    padding: 0px;
-  }
-
-
-  p {
-    font-size: 8pt;
-    word-wrap: break-word;
-    flex-wrap: wrap;
-  }
-
-  .p_left_align {
-    font-size: 8pt;
-    word-wrap: break-word;
-    flex-wrap: wrap;
-    padding-top: 0px;
-  }
-
-  .h1_photo_gallery {
-    font-size: 20pt;
-    word-wrap: break-word;
-  }
-
-  .h1_left_align {
-    font-size: 10pt;
-    word-wrap: break-word;
-  }
-
-  .text-div {
-    padding-left: 0px;
-  }
-
-  .picture-div {
-    padding-left: 0px;
-    margin-left: 2vh;
-    display: flex;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-
-  }
-
-  .img_details {
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    width: 50vw;
-    height: 70vw;
-    object-position: bottom left;
-    align-items: left;
-    align-self: left;
-  }
-
-  .about-container {
-    padding: 1px;
-  }
-}
-
 
 iframe {
   flex-direction: row;
@@ -242,6 +83,8 @@ h2 {
   font-weight: 300;
   color: #555;
 }
+
+
 
 
 p {
@@ -363,4 +206,192 @@ footer {
 iframe {
   align-items: left;
   align-content: left;
+}
+
+
+
+@media only screen and (width <=2000px) {
+  /* body {
+    background-color: darksalmon;
+  } */
+
+  iframe {
+    width: 30vw;
+    height: 20vw;
+  }
+
+  .maybe-grid {
+    grid-template-columns: 50% 30%;
+    column-gap: 30px;
+  }
+
+  /* .gallerydescript {
+    font-family: Reenie Beanie;
+    font-size: 35pt;
+    font-weight: 600;
+    margin-top: -20pt;
+  } */
+
+}
+
+
+@media only screen and (width <=1000px) {
+  /* body {
+    background-color: lightblue;
+    align-items: left;
+    text-align: left;
+  } */
+
+  .gallerydescript {
+    font-size: 27pt;
+    margin-top: -10pt;
+    margin-bottom: 10pt;
+  }
+
+  h2 {
+    font-size: 15pt;
+    word-wrap: break-word;
+  }
+
+  p {
+    font-size: 14pt;
+    word-wrap: break-word;
+  }
+
+  .maybe-grid {
+    grid-template-columns: min-content;
+    grid-template-rows: min-content;
+    row-gap: 0px;
+    column-gap: 0px;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    align-items: left;
+    align-content: left;
+  }
+
+  .img_details {
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    width: 40vw;
+    height: 60vw;
+    object-position: bottom left;
+    align-items: left;
+    align-self: left;
+  }
+
+  .picture-div {
+    padding-left: 2vh;
+    margin-left: 2vh;
+    display: flex;
+
+  }
+
+  .text-div {
+    align-items: left;
+    align-self: left;
+    align-content: left;
+  }
+
+  iframe {
+    width: 50vw;
+    height: 30vw;
+  }
+
+  .p_left_align {
+    font-size: 10pt;
+    flex-wrap: wrap;
+    word-wrap: break-word;
+  }
+
+  .h1_photo_gallery {
+    font-size: 30pt;
+    word-wrap: break-word;
+  }
+
+  .h1_left_align {
+    font-size: 15pt;
+    word-wrap: break-word;
+  }
+
+  .about-container {
+    align-items: left;
+    align-content: left;
+    align-self: left;
+  }
+}
+
+@media only screen and (width <=640px) {
+  /* body {
+    background-color: darkgrey;
+    word-wrap: break-word;
+  } */
+
+  .gallerydescript {
+    font-size: 19pt;
+    margin-top: -5pt;
+    margin-bottom: 0pt;
+    word-wrap: break-word;
+  }
+
+  h2 {
+    font-size: 8pt;
+    word-wrap: break-word;
+    padding: 0px;
+  }
+
+  .h1_left_align {
+    padding: 0px;
+  }
+
+
+  p {
+    font-size: 12pt;
+    word-wrap: break-word;
+    flex-wrap: wrap;
+  }
+
+  .p_left_align {
+    font-size: 8pt;
+    word-wrap: break-word;
+    flex-wrap: wrap;
+    padding-top: 0px;
+  }
+
+  .h1_photo_gallery {
+    font-size: 20pt;
+    word-wrap: break-word;
+  }
+
+  .h1_left_align {
+    font-size: 10pt;
+    word-wrap: break-word;
+  }
+
+  .text-div {
+    padding-left: 0px;
+  }
+
+  .picture-div {
+    padding-left: 0px;
+    margin-left: 2vh;
+    display: flex;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+
+  }
+
+  .img_details {
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    width: 50vw;
+    height: 70vw;
+    object-position: bottom left;
+    align-items: left;
+    align-self: left;
+  }
+
+  .about-container {
+    padding: 1px;
+  }
 }
